Fixing social link spacing in footer

--- a/public/assets/scss/components/_footer.scss
+++ b/public/assets/scss/components/_footer.scss
@@ -72,10 +72,8 @@
     li {
       float: left;
       list-style: none;
-      margin-left: 10px;
-      &:first-of-type {
-        margin-left: 0;
-      }
+      margin-right: $vertical-beat;
+      margin-bottom: $vertical-beat;
     }
     
     a {
@@ -104,10 +102,7 @@
 
     &.app-links {
       li {
-        margin-left: 20px;
-        &:first-of-type {
-          margin-left: 0;
-        }
+        margin-right: 20px;
       }
       .icon {
         &.icon-apple {
